Closed Bug 324667 Opened 18 years ago Closed 18 years ago

infinite loop on startup with html parser

Categories

(Core :: DOM: HTML Parser, defect, P1)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: david, Assigned: mrbkap)

References

Details

(Keywords: hang)

Attachments

(1 file)

*** Chrome Registration of locale : Checking for contents.rdf at jar:resource:/chrome/en-US.jar!/locale/en-US/messenger-mapi/
*** Chrome Registration of locale : Checking for contents.rdf at jar:resource:/chrome/US.jar!/locale/US/messenger-region/
*** Chrome Registration of package: Checking for contents.rdf at jar:resource:/chrome/calendar.jar!/content/calendar/
###!!! ASSERTION: Infinite loop: can't advance a reading iterator beyond the end of a string: 'one_hop>0', file ../../../dist
/include/htmlparser/nsScannerString.h, line 449
Break: at file ../../../dist/include/htmlparser/nsScannerString.h, line 449
^G###!!! ASSERTION: Infinite loop: can't advance a reading iterator beyond the end of a string: 'one_hop>0', file ../../../di
st/include/htmlparser/nsScannerString.h, line 449
Break: at file ../../../dist/include/htmlparser/nsScannerString.h, line 449
^G###!!! ASSERTION: Infinite loop: can't advance a reading iterator beyond the end of a string: 'one_hop>0', file ../../../di
st/include/htmlparser/nsScannerString.h, line 449
Break: at file ../../../dist/include/htmlparser/nsScannerString.h, line 449


repeats forever.

amd64, gentoo linux CVS trunk built this morning.
recompiling without calendar yields the same thing, just barfs on /chrome/en-US.jar!locale/en-US/editor/ instead
==> parser
Assignee: general → mrbkap
Component: General → HTML: Parser
Keywords: hang
Product: Mozilla Application Suite → Core
QA Contact: general → parser
Didn't peterv fix this with his backout earlier today?
I think I've found the problem, I'm about to check in a potential fix with r+sr=jst (I'll attach the patch next).
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.9alpha
Attached patch Potential fixSplinter Review
(noting r+sr=jst).
Attachment #209925 - Flags: superreview+
Attachment #209925 - Flags: review+
I checked the fix in. Marking (optimistically) as fixed.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Blocks: 323299
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: