Try to fix an infinite loop on startup (bug 324667, r+sr=jst).